--- a/thank-you.html
+++ b/thank-you.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 QuizMaster. All rights reserved.</p>
+        <p>&copy; 2024 Riya Kundu. All rights reserved.</p>
     </footer>
 </body>
 </html>
